--- a/views/index.ejs
+++ b/views/index.ejs
@@ -96,7 +96,7 @@
       </div>
 
       <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-        <a href="/recipe/#" class="col text-center category_link">
+        <a href="recipe/#" class="col text-center category_link">
           <div class="category__img category__img--large shadow">
             <img src="img/maincourse.jpg" loading="lazy">
           </div>
@@ -106,58 +106,58 @@
 
         <a href="/recipe/#" class="col text-center category_link">
           <div class="category__img category__img--large shadow">
-            <img src="img/maincourse.jpg" loading="lazy">
+            <img src="img/Cheese Spaghetti .jpg" loading="lazy">
           </div>
           <div class="pt-1">
-            Noodle</div>
+            Cheese Spaghetti</div>
         </a>
 
         <a href="/recipe/#" class="col text-center category_link">
           <div class="category__img category__img--large shadow">
-            <img src="img/maincourse.jpg" loading="lazy">
+            <img src="img/Cream Cheese Steak .jpg" loading="lazy">
           </div>
           <div class="pt-1">
-            Noodle</div>
+            Cream Cheese Steak</div>
         </a>
 
         <a href="/recipe/#" class="col text-center category_link">
           <div class="category__img category__img--large shadow">
-            <img src="img/maincourse.jpg" loading="lazy">
+            <img src="img/Meatball.jpg" loading="lazy">
           </div>
           <div class="pt-1">
-            Noodle</div>
+            Meatball</div>
         </a>
 
         <a href="/recipe/#" class="col text-center category_link">
           <div class="category__img category__img--large shadow">
-            <img src="img/maincourse.jpg" loading="lazy">
+            <img src="img/Spicy Ramen Noodles.jpg" loading="lazy">
           </div>
           <div class="pt-1">
-            Noodle</div>
+            Spicy Ramen Noodles</div>
         </a>
 
         <a href="/recipe/#" class="col text-center category_link">
           <div class="category__img category__img--large shadow">
-            <img src="img/maincourse.jpg" loading="lazy">
+            <img src="img/vegetable chop suey.jpg" loading="lazy">
           </div>
           <div class="pt-1">
-            Noodle</div>
+            vegetable chopsuey</div>
         </a>
 
         <a href="/recipe/#" class="col text-center category_link">
           <div class="category__img category__img--large shadow">
-            <img src="img/maincourse.jpg" loading="lazy">
+            <img src="img/Sushi.jpg" loading="lazy">
           </div>
           <div class="pt-1">
-            Noodle</div>
+            Sushi</div>
         </a>
 
         <a href="/recipe/#" class="col text-center category_link">
           <div class="category__img category__img--large shadow">
-            <img src="img/maincourse.jpg" loading="lazy">
+            <img src="img/Spicy Vegan Mushroom.jpg" loading="lazy">
           </div>
           <div class="pt-1">
-            Noodle</div>
+            Spicy Vegan Mushroom.</div>
         </a>
 
  
